Updated bundle identifer to Bazaarvoice

--- a/apps/Test-One-Method-iOS4-App/iOS4/iOS4-Info.plist
+++ b/apps/Test-One-Method-iOS4-App/iOS4/iOS4-Info.plist
@@ -29,7 +29,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.leonfu.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.bazaarvoice.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
