UI updates, cleanup

--- a/apps/PhotoUploadExample/PhotoUploadExample/PhotoUploadExample-Info.plist
+++ b/apps/PhotoUploadExample/PhotoUploadExample/PhotoUploadExample-Info.plist
@@ -49,5 +49,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleBlackOpaque</string>
 </dict>
 </plist>
