update for iPhone 5

--- a/apps/BrowsePhotoExample/BrowseProductsExample/BrowseProductsExample-Info.plist
+++ b/apps/BrowsePhotoExample/BrowseProductsExample/BrowseProductsExample-Info.plist
@@ -40,9 +40,7 @@
 	<key>UIMainStoryboardFile</key>
 	<string>MainStoryboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
-	<array>
-		<string>armv7</string>
-	</array>
+	<array/>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleBlackOpaque</string>
 	<key>UISupportedInterfaceOrientations</key>
