--- a/BVSDK/BVSDKTests/BVSDKTests-Info.plist
+++ b/BVSDK/BVSDKTests/BVSDKTests-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>bazaarvoice.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.bazaarvoice.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
