--- a/BVSDK/BVSDKTests/BVSDKTests-Info.plist
+++ b/BVSDK/BVSDKTests/BVSDKTests-Info.plist
@@ -16,6 +16,11 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 </dict>
