Fixed example projects build errors, and made slight improvements. Updated LICENSE link to api terms of use. Updated Example project's readmes.

--- a/Example/KitchenSink/BVSampleApp/BVSampleApp-Info.plist
+++ b/Example/KitchenSink/BVSampleApp/BVSampleApp-Info.plist
@@ -52,12 +52,12 @@
 	<key>UIStatusBarHidden</key>
 	<false/>
 	<key>UIStatusBarStyle</key>
-	<string>UIStatusBarStyleDefault</string>
+	<string>UIStatusBarStyleLightContent</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<true/>
+	<false/>
 </dict>
 </plist>
