--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ osx_image: xcode7 #2
 script:
   - echo print xctool version
   - xctool -v
-  - xctool -workspace ./BVSDK/BVSDK.xcworkspace -scheme BVSDK -sdk iphonesimulator9.0 build
+  - xctool -workspace ./BVSDK/BVSDK.xcworkspace -scheme BVSDK-Example -sdk iphonesimulator9.0 build
