--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: objective-c  #1
 osx_image: xcode7 #2
 
 script:
-  - echo print xctool version
-  - xctool -v
-  - xctool -workspace ./BVSDK/BVSDK.xcworkspace -scheme BVSDK-Example -sdk iphonesimulator9.0 build
+#  - echo print xctool version
+#  - xctool -v
+#  - xctool -workspace ./BVSDK/BVSDK.xcworkspace -scheme BVSDK-Example -sdk iphonesimulator9.0 build
+   - xcodebuild test -workspace ./BVSDK/BVSDK.xcworkspace -scheme "BVSDK-Example" -configuration Debug -sdk iphonesimulator
