--- a/Tests/Podfile
+++ b/Tests/Podfile
@@ -1,6 +1,6 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
-target 'BVSDK', :exclusive => true do
+target 'BVSDK' do
     pod "BVSDK", :path => "../"
     pod "BVSDK/BVConversations", :path => "../"
     pod "BVSDK/BVAdvertising", :path => "../"
