--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
-osx_image: xcode7.3
+osx_image: xcode8
 podfile: ./Tests/Podfile
 
 git:
@@ -7,8 +7,9 @@ git:
 
 before_install:
 #  - gem update cocoapods --no-ri --no-rdoc
+  - gem install cocoapods -v '1.0.1'
   - gem install xcpretty --no-ri --no-rdoc
-  - SIMULATOR_ID=$(xcrun instruments -s | grep -o "iPhone 6 (9.3) \[.*\]" | grep -o "\[.*\]" | sed "s/^\[\(.*\)\]$/\1/")
+  - SIMULATOR_ID=$(xcrun instruments -s | grep -o "iPhone 6 (10.0) \[.*\]" | grep -o "\[.*\]" | sed "s/^\[\(.*\)\]$/\1/")
 
 
 script:
