--- a/Examples/BVSDKDemo/Podfile
+++ b/Examples/BVSDKDemo/Podfile
@@ -52,3 +52,15 @@ target 'BVSDKDemoUITests' do
 
 end
 
+
+ post_install do |installer|
+    installer.pods_project.targets.each do |target|
+
+        target.build_configurations.each do |config|
+            config.build_settings['SWIFT_VERSION'] = '2.3'
+            config.build_settings['APPLICATION_EXTENSION_API_ONLY'] = 'NO'
+        end
+
+    end
+  end
+
