Add in support for parsing Form Fieds for Conversations Question/Answer/Review when API is called in .Preview mode. This assists develpers creating submission forms with the default values, field validation values, and picker values.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
 
 # Run the unit tests on the available simulator
    - cd ./Tests
-   - pod install
+   - pod update
    - cd ..
    - xcodebuild test -workspace ./Tests/BVSDK.xcworkspace -scheme "BVSDK-Tests" -configuration Debug -sdk iphonesimulator | xcpretty -c
 
