--- a/Examples/Advertising/Obj-C/Podfile
+++ b/Examples/Advertising/Obj-C/Podfile
@@ -1,5 +1,7 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
+use_frameworks!
+
 target 'TargetedAdsDemo' do
 
 	pod "BVSDK/BVAdvertising", :path => "../../../"
