--- a/Examples/Curations/Obj-C/Podfile
+++ b/Examples/Curations/Obj-C/Podfile
@@ -1,6 +1,8 @@
 # Uncomment this line to define a global platform for your project
 platform :ios, '8.0'
 
+use_frameworks!
+
 target 'CurationsExample' do
 	pod 'BVSDK/BVCurations', :path => "../../../"
     pod 'SDWebImage'
