MOB-1001-Updated demo app with swift 5 support

--- a/Examples/BVSDKDemo/BVSDKDemo/Info.plist
+++ b/Examples/BVSDKDemo/BVSDKDemo/Info.plist
@@ -50,6 +50,8 @@
 	<string></string>
 	<key>FacebookDisplayName</key>
 	<string>BVSDKDemo</string>
+	<key>GADApplicationIdentifier</key>
+	<string>ca-app-pub-3940256099942544~1458002511</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
