Added key in the plist file and updated the script for frameworks.

--- a/Examples/BVSDKDemo/BVSDKDemo/Info.plist
+++ b/Examples/BVSDKDemo/BVSDKDemo/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+  <key>NSUserTrackingUsageDescription</key> 
+  <string>Your data will be used to provide you a better and personalized ad experience</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
