--- a/Examples/BVSDKDemo/Podfile
+++ b/Examples/BVSDKDemo/Podfile
@@ -24,7 +24,7 @@ target 'BVSDKDemo' do
   pod 'Fabric'
   pod 'Crashlytics'
   pod 'SDWebImage'
-  pod 'Google-Mobile-Ads-SDK'
+  pod 'Google-Mobile-Ads-SDK', '7.61.0'
   pod 'HCSStarRatingView'
   pod 'NVActivityIndicatorView'
   pod 'FontAwesomeKit/FontAwesome'
