--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,14 +20,14 @@ jobs:
     - name: Build
       run: '././ci_scripts/build_framework.sh'
     
-#    - name: Run tests
-#      run: '././ci_scripts/run_tests.sh'
+    - name: Run tests
+      run: '././ci_scripts/run_tests.sh'
     
     - name: Build Demo App
       run: '././ci_scripts/build_bvsdkdemo.sh'
         
-    - name: Installation Carthage
-      run: '././Tests/installation_tests/carthage/test.sh'
+#    - name: Installation Carthage
+#      run: '././Tests/installation_tests/carthage/test.sh'
     
     - name: Build BVPixel
       run: '././Tests/installation_tests/bvpixel/swift/test.sh'
