--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,7 +2,7 @@ name: BVSDK CI
 
 on:
   push:
-    branches: [ '**' ]
+    branches: [ master, develop ]
   pull_request:
     branches: [ master, develop ]
 
