--- a/.github/workflows/sonarscanCI.yml
+++ b/.github/workflows/sonarscanCI.yml
@@ -2,9 +2,9 @@ name: BVSDK Sonarqube Scan CI
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ master ]
   pull_request:
-    branches: [ develop ]
+    branches: [ master ]
 
 env:
   SONAR_LOGIN: ${{ secrets.SONAR_TOKEN }}
