--- a/Examples/BVSDKDemo/Podfile
+++ b/Examples/BVSDKDemo/Podfile
@@ -10,6 +10,7 @@ def bvsdk_pod
   pod 'BVSDK/BVCurationsUI', :path => "../../"
   pod 'BVSDK/BVRecommendations', :path => "../../"
   pod 'BVSDK/BVNotifications', :path => "../../"
+  pod 'BVSDK/BVProductSentiments', :path => "../../"
 end
 
 def common_pods
@@ -40,6 +41,8 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
+      config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
       config.build_settings['APPLICATION_EXTENSION_API_ONLY'] = 'NO'
     end
   end
